--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+\.DS_Store
+
+\.idea/workspace\.xml
+
+\.idea/misc\.xml
+
+\.idea/vcs\.xml
+
+\.idea/Ai-challenge-2019\.iml
+
+\.idea/modules\.xml
